# tree-sitter-shank

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  parser.c  pyproject.toml  setup.py  t.py  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
bindings/c/: tree-sitter-shank.h  tree-sitter-shank.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_shank/: __init__.py  binding.c
bindings/rust/: lib.rs
examples/: array.shank  complex_generics.shank  default_parameter.shank  expression.shank  generic_definition.shank  generic_instatiated_record_field.shank  ifelse.shank  negative.shank  refernces.shank  strings.shank  t.shank  tests.shank  variables_access.shank
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
